# chiral_mols

./: .gitignore  pyproject.toml
scripts/: compile_dataset.py  download_binding_db.sh  evaluate_model.py  inversion_scan.py  read_cmrt_data.py  single_mol_prediction.py  train_classifier.py
src/chiral_mols/: create_dataset.py  mlip_utils.py  ptr_dataset.py  relax_mols.py  sample.py  smiles_enumeration.py  structure_id.py
src/chiral_mols/data/: create_dataset.py  mlip_utils.py  ptr_dataset.py  read_cmrt_data.py  relax_mols.py  sample.py  smiles_enumeration.py
src/chiral_mols/evaluation/: evaluation.py  smiles_error_analysis.py
src/chiral_mols/model/: chiral_embedding_model.py  classifier.py  configuration.py  irreps_utils.py  model_output.py  molecular_embedding_model.py  reload_model.py  rms_norm.py
src/chiral_mols/training/: dataset_splitting.py  embedding_normalization.py  evaluation.py  loss.py  training.py  traininig_config.py
tests/: test_chirality_labeling.py  test_classifier.py  test_datasplitting.py  test_embedding_model.py  test_ptr_dataset.py  test_structure_ids.py  test_symmetries.py
